tests/gen-derivation/inputvalidation/external-gens/expected
1/1: Building ValidateInput (ValidateInput.idr)
Error: While processing right hand side of genY_repX_autoimpl. Error during reflection: Repetition of an auto-implicit external generator

ValidateInput:18:96--18:97
 14 |   MkY : Y Int String
 15 | 
 16 | --- Repeating external gens ---
 17 | 
 18 | genY_repX_autoimpl : Fuel -> (Fuel -> Gen CanBeEmptyStatic X) => (Fuel -> Gen CanBeEmptyStatic X) => (a, b : Type) -> Gen CanBeEmptyStatic $ Y a b
                                                                                                     ^

Error: While processing right hand side of genY_nongen_autoimpl_list. Error during reflection: The result type of the generator function must be of type "`Gen CanBeEmptyStatic` of desired result"

ValidateInput:23:46--23:54
 19 | genY_repX_autoimpl = deriveGen
 20 | 
 21 | --- Non-gen externals ---
 22 | 
 23 | genY_nongen_autoimpl_list : Fuel -> (Fuel -> List Int) => (a, b : Type) -> Gen CanBeEmptyStatic $ Y a b
                                                   ^^^^^^^^

Error: While processing right hand side of genY_nongen_autoimpl_pair. Error during reflection: No arguments in the generator function signature, at least a fuel argument must be present

ValidateInput:26:38--26:69
 22 | 
 23 | genY_nongen_autoimpl_list : Fuel -> (Fuel -> List Int) => (a, b : Type) -> Gen CanBeEmptyStatic $ Y a b
 24 | genY_nongen_autoimpl_list = deriveGen
 25 | 
 26 | genY_nongen_autoimpl_pair : Fuel -> (Fuel -> Gen CanBeEmptyStatic X, Fuel -> Gen CanBeEmptyStatic X') => (a, b : Type) -> Gen CanBeEmptyStatic $ Y a b
                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error: While processing right hand side of genY_nongen_autoimpl_dpair. Error during reflection: The result type of the generator function must be of type "`Gen CanBeEmptyStatic` of desired result"

ValidateInput:29:50--29:52
 25 | 
 26 | genY_nongen_autoimpl_pair : Fuel -> (Fuel -> Gen CanBeEmptyStatic X, Fuel -> Gen CanBeEmptyStatic X') => (a, b : Type) -> Gen CanBeEmptyStatic $ Y a b
 27 | genY_nongen_autoimpl_pair = deriveGen
 28 | 
 29 | genY_nongen_autoimpl_dpair : Fuel -> (Fuel -> (a ** b ** Gen CanBeEmptyStatic $ Y a b)) => (a, b : Type) -> Gen CanBeEmptyStatic $ Y a b
                                                       ^^

Error: While processing right hand side of genY_nongen_autoimpl_list_nofuel. Error during reflection: No arguments in the generator function signature, at least a fuel argument must be present

ValidateInput:34:44--34:52
 30 | genY_nongen_autoimpl_dpair = deriveGen
 31 | 
 32 | --- Externals with no fuel ---
 33 | 
 34 | genY_nongen_autoimpl_list_nofuel : Fuel -> List Int => (a, b : Type) -> Gen CanBeEmptyStatic $ Y a b
                                                 ^^^^^^^^

Error: While processing right hand side of genY_nongen_autoimpl_pair_nofuel. Error during reflection: No arguments in the generator function signature, at least a fuel argument must be present

ValidateInput:37:45--37:68
 33 | 
 34 | genY_nongen_autoimpl_list_nofuel : Fuel -> List Int => (a, b : Type) -> Gen CanBeEmptyStatic $ Y a b
 35 | genY_nongen_autoimpl_list_nofuel = deriveGen
 36 | 
 37 | genY_nongen_autoimpl_pair_nofuel : Fuel -> (Gen CanBeEmptyStatic X, Gen CanBeEmptyStatic X') => (a, b : Type) -> Gen CanBeEmptyStatic $ Y a b
                                                  ^^^^^^^^^^^^^^^^^^^^^^^

Error: While processing right hand side of genY_nongen_autoimpl_dpair_nofuel. Error during reflection: No arguments in the generator function signature, at least a fuel argument must be present

ValidateInput:40:48--40:50
 36 | 
 37 | genY_nongen_autoimpl_pair_nofuel : Fuel -> (Gen CanBeEmptyStatic X, Gen CanBeEmptyStatic X') => (a, b : Type) -> Gen CanBeEmptyStatic $ Y a b
 38 | genY_nongen_autoimpl_pair_nofuel = deriveGen
 39 | 
 40 | genY_nongen_autoimpl_dpair_nofuel : Fuel -> (a ** b ** Gen CanBeEmptyStatic $ Y a b) => (a, b : Type) -> Gen CanBeEmptyStatic $ Y a b
                                                     ^^

Error: While processing right hand side of genY_require_self_autoimpl. Error during reflection: External generators contain the generator asked to be derived

ValidateInput:45:100--45:103
 41 | genY_nongen_autoimpl_dpair_nofuel = deriveGen
 42 | 
 43 | --- Result is alteady in externals ---
 44 | 
 45 | genY_require_self_autoimpl : Fuel -> (Fuel -> Gen CanBeEmptyStatic X) => (Fuel -> (a, b : Type) -> Gen CanBeEmptyStatic $ Y a b) => (a, b : Type) -> Gen CanBeEmptyStatic $ Y a b
                                                                                                         ^^^

Error: While processing right hand side of genY_autoimpl_in_autoimpl. Error during reflection: Auto-implicit argument should not contain its own auto-implicit arguments

ValidateInput:50:119--50:122
 46 | genY_require_self_autoimpl = deriveGen
 47 | 
 48 | --- Auto-implicits are present inside auto-implicits ---
 49 | 
 50 | genY_autoimpl_in_autoimpl : Fuel -> (Fuel -> (Fuel -> (a, b : Type) -> Gen CanBeEmptyStatic $ Y a b) => (a : Type) -> Gen CanBeEmptyStatic (b ** Y a b)) => Gen CanBeEmptyStatic (a ** b ** Y a b)
                                                                                                                            ^^^

